fix(inner page): overflow text problem

--- a/src/js/components/pages/dashboard/InnerContent/Base.styl
+++ b/src/js/components/pages/dashboard/InnerContent/Base.styl
@@ -31,6 +31,8 @@ $md-size = 44.9375em
             flex-direction: column !important
     .InnerBox
         width: 50%
+        h4
+            word-break: break-all
 
 .btn_section
     .FBshare,
